[tool.poetry]
name = "pylisper"
version = "0.1.0"
description = "A simple pure python lisp interpreter"
authors = ["Rafał Galczak <r.galczak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rply = "^0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
