[tool.poetry]
name = "pylisper"
version = "0.1.0"
description = "A simple pure python lisp interpreter"
authors = ["Rafał Galczak <r.galczak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rply = "^0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
rope = "^0.17.0"
black = "^20.8b1"
flake8 = "^3.8.3"
isort = "^5.4.2"
autoflake = "^1.4"
hypothesis = "^5.30.0"

[tool.poetry.scripts]
fmt = 'scripts.fmt:main'
repl = 'pylisper.repl:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
